--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
+    "vuex": "^3.5.1",
     "web3": "^1.2.9"
   },
   "devDependencies": {
