--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "node-sass": "^4.14.1",
+    "path": "^0.12.7",
     "rimraf": "^3.0.2",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
